--- a/u-short/src/App.css
+++ b/u-short/src/App.css
@@ -1,3 +1,29 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+}
+
+html,body{
+    height: 100%;
+    width: 100%;
+}
+
+.main{
+    height: 100vh;
+    width: max-content;
+    color: white;
+    .main-body{
+        padding: 40px;
+        .welcome-text{
+            color: rgba(57, 146, 202, 0.462);
+            font-weight: 500;
+            font-size: 50px;
+        }
+    }
+    .main-bg{
+        width: 1600px;
+        height: 720px;
+        position: fixed;
+        z-index: -1;
+    }
 }
