--- a/u-short/src/App.css
+++ b/u-short/src/App.css
@@ -15,7 +15,7 @@ html,body{
     .main-body{
         padding: 40px;
         .welcome-text{
-            color: rgba(57, 146, 202, 0.462);
+            color: rgba(184, 215, 234, 0.462);
             font-weight: 500;
             font-size: 50px;
         }
@@ -25,5 +25,20 @@ html,body{
         height: 720px;
         position: fixed;
         z-index: -1;
+    }
+    .cntnr{
+        background-color: rgba(128, 128, 128, 0.092);
+        padding: 25px;
+        backdrop-filter: blur(5px);
+        border-radius: 15px;
+    }
+    hr{
+        margin: 20px 0px 30px;
+    }
+    .action-button{
+        padding: 6px 10px;
+        margin: 15px 0px 0px;
+        border: 4px solid gray;
+        border-radius: 50px;
     }
 }
